<resources>
    <string name="app_name">AAHAR (End User)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_mess">DMess</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_remainder">Remainder</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--    Join Activity-->
    <string name="welcome_back">Welcome Back</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginText">I want to Login</string>
    <string name="signInText">Sign Up to continue</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="team_ameya_s_project">Team Ameya\'s Project</string>
    <string name="food_quote">दीपो भक्षयते ध्वान्तं</string>
    <string name="notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="yes_account">Already have an account? Login</string>
    <string name="sign_in_to_enter">Sign in to Enter</string>
    <string name="welcome_user">Welcome User</string>
    <string name="join">Join</string>
    <string name="ratings">Ratings</string>
    <string name="price_per_month">Price per month :</string>
    <string name="edit_rating">Edit Rating</string>
<<<<<<< HEAD
    <string name="overall_rating">Overall Rating</string>
    <string name="congratulations_payment_is_successfully_done">Congratulations Payment is successfully done</string>
=======
    <string name="congratulations_payment_is_successfully_done">Congratulations Payment is successfully done</string>
    <string name="overall_rating">Overall Rating</string>
>>>>>>> origin
    <string name="total_present_day_in_this_month">Total Present Day in this Month</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="_9">9</string>
    <string name="verify">Verify</string>
    <string name="otp_verification">OTP verification</string>
    <string name="mess_owner">Mess Owner :</string>
    <string name="address">Address :</string>
    <string name="rs">Rs.</string>
    <string name="special_dishes">special dishes</string>
    <string name="complaints_and_reviews_click_here"><![CDATA[complaints and reviews -> click here]]></string>
    <string name="ratings_click_here"><![CDATA[ratings -> click here]]></string>
    <string name="pay">Pay</string>
    <string name="mess_mobile">Mobile :</string>
    <string name="mess_email">Email :</string>
    <string name="price_month">Price/Month:</string>
    <string name="mess_logo">Mess Logo</string>
    <string name="today_s_attendance">Today\'s Attendance</string>
    <string name="are_you_coming_for_eat_today">Are you coming for eat today?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="days_remaining">Days Remaining</string>
    <string name="use_razor_pay">Use Razor Pay</string>
    <string name="payment_id">Payment Id :</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="upi_id">UPI Id</string>
    <string name="owner_name">Owner Name</string>
    <string name="enter_note">Enter Note</string>
    <string name="send_by_upi">send by upi</string>
    <string name="payment_successfull">payment successfull</string>
    <string name="logout">Logout</string>
    <string name="after_clicking_logout_you_will_be_redirected_to_sign_up_page">After clicking logout you will be redirected to Sign Up page</string>
</resources>