<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_mess"
            android:title="Explore"/>
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/profile_avatar"
            android:title="Attendance"/>
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calender" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />

    </group>
</menu>