<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.myinnovation.customer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.myinnovation.customer.ui.Calendar.CalendarFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.myinnovation.customer.ui.Notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.myinnovation.customer.ui.Notification.AttendanceFragment"
        android:label="Attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.myinnovation.customer.ui.Explore.ExploreFragment"
        android:label="Explore"
        tools:layout="@layout/fragment_explore" />
</navigation>