<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/headerbg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome_user"
            android:textColor="#fff"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage">


        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/text_box"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/text_box"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/reg_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_box"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/mobile"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_box"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reg_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:id="@+id/to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/yes_account"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>